name: blockapps-tools
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
category:      Data Structures
license: Apache-2.0
description:  
	      Tool to query the ethereum databases

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.4

executable queryStrato
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , ansi-wl-pprint
                 , array
                 , base16-bytestring
                 , binary
                 , bytestring
                 , cmdargs
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , strato-p2p-client
                 , blockapps-data
                 , blockapps-data-db
                 , ethereum-rlp
                 , merkle-patricia-db
                 , blockapps-util
                 , ethereum-vm
                 , filepath
                 , haskoin
                 , leveldb-haskell
                 , monad-loops
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , time
                 , transformers
    main-is: Main.hs
    other-modules:
                   Block
                   BlockGO
                   Code
                   DumpLevelDB
                   Hash
                   Init
                   Raw
                   RawMP
                   RLP
                   State
                   Util
    buildable: True
    hs-source-dirs: src

